# workshop

recognition/: CMakeLists.txt
recognition/image/: image0.png:Zone.Identifier  image1.png:Zone.Identifier
recognition/include/: light.h
recognition/src/: lightReco.cpp  main.cpp
